:sparkles: header component and theme toggle

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,16 +5,17 @@
 @layer base {
 	:root {
 		--background: 0 0% 100%;
-		--foreground: 222.2 84% 4.9%;
+		--foreground: 213 23% 26%;
+		--gradient-background: linear-gradient(170deg, rgba(230,231,232,1) 0%, rgba(192,198,205,1) 100%);
 
 		--card: 0 0% 100%;
-		--card-foreground: 222.2 84% 4.9%;
+		--card-foreground: 213 23% 26%;
 
 		--popover: 0 0% 100%;
-		--popover-foreground: 222.2 84% 4.9%;
+		--popover-foreground: 213 23% 26%;
 
 		--primary: 222.2 47.4% 11.2%;
-		--primary-foreground: 210 40% 98%;
+		--primary-foreground: 210 29% 91%;
 
 		--secondary: 210 40% 96.1%;
 		--secondary-foreground: 222.2 47.4% 11.2%;
@@ -22,43 +23,44 @@
 		--muted: 210 40% 96.1%;
 		--muted-foreground: 215.4 16.3% 46.9%;
 
-		--accent: 210 40% 96.1%;
+		--accent: 0 0% 100%;
 		--accent-foreground: 222.2 47.4% 11.2%;
 
 		--destructive: 0 84.2% 60.2%;
-		--destructive-foreground: 210 40% 98%;
+		--destructive-foreground: 210 29% 91%;
 
 		--border: 214.3 31.8% 91.4%;
 		--input: 214.3 31.8% 91.4%;
-		--ring: 222.2 84% 4.9%;
+		--ring: 213 23% 26%;
 
 		--radius: 0.5rem;
 	}
 
 	.dark {
-		--background: 222.2 84% 4.9%;
-		--foreground: 210 40% 98%;
+		--background: 213 23% 26%;
+		--foreground: 210 29% 91%;
+		--gradient-background: linear-gradient(170deg, rgba(30,30,30,1) 0%, rgba(31,33,37,1) 35%, rgba(31,36,42,1) 100%);
 
-		--card: 222.2 84% 4.9%;
-		--card-foreground: 210 40% 98%;
+		--card: 213 23% 26%;
+		--card-foreground: 210 29% 91%;
 
-		--popover: 222.2 84% 4.9%;
-		--popover-foreground: 210 40% 98%;
+		--popover: 213 23% 26%;
+		--popover-foreground: 210 29% 91%;
 
-		--primary: 210 40% 98%;
+		--primary: 210 29% 91%;
 		--primary-foreground: 222.2 47.4% 11.2%;
 
 		--secondary: 217.2 32.6% 17.5%;
-		--secondary-foreground: 210 40% 98%;
+		--secondary-foreground: 210 29% 91%;
 
 		--muted: 217.2 32.6% 17.5%;
 		--muted-foreground: 215 20.2% 65.1%;
 
-		--accent: 217.2 32.6% 17.5%;
-		--accent-foreground: 210 40% 98%;
+		--accent:  210 13% 18%;
+		--accent-foreground: 210 29% 91%;
 
 		--destructive: 0 62.8% 30.6%;
-		--destructive-foreground: 210 40% 98%;
+		--destructive-foreground: 210 29% 91%;
 
 		--border: 217.2 32.6% 17.5%;
 		--input: 217.2 32.6% 17.5%;
